--- a/scoreui/package.json
+++ b/scoreui/package.json
@@ -1,40 +1,23 @@
 {
   "name": "scoreui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "jest",
-    "coverage": "jest --coverage",
-    "preview": "vite preview"
+    "start": "webpack -d --watch"
   },
   "dependencies": {
-    "antd": "^5.8.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "construct-ui": "^0.3.3",
+    "jwt-decode": "^3.1.2",
+    "mithril": "^2.2.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.2",
-    "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.45.0",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
